--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Node Server Testing Challenge",
   "scripts": {
-    "test": "jest --watch"
+    "test": "cross-env DB_ENV=testing jest --watch --verbose --detectOpenHandles",
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "jest": {
     "testEnvironment": "node"
@@ -14,11 +16,19 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.13.0",
+    "eslint": "^7.20.0",
     "jest": "^26.6.3",
-    "supertest": "^6.0.1"
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "knex-cleaner": "^1.3.1",
+    "pg": "^8.5.1",
+    "sqlite3": "^5.0.2"
   }
 }
