--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "Node Server Testing Challenge",
   "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --detectOpenHandles",
+    "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --detectOpenHandles",
     "server": "cross-env NODE_ENV=development nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run"
   },
   "jest": {
     "testEnvironment": "node"
@@ -22,6 +24,7 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "@types/jest": "^26.0.20",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
